--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -268,12 +268,23 @@
                         inolvidable llena de color y diversión!</p>
             </div>
             <div>
-                <model-viewer class="elem1Big
-                            id="
-                reveal" loading="eager" camera-controls touch-action="pan-y" auto-rotate
-                poster="assets/1Big.png" tone-mapping="aces" src="assets/1Big.png"
-                shadow-intensity="1" ar>
+                <model-viewer 
+                    class="elem1Big"
+                    reveal="auto"
+                    loading="eager"
+                    camera-controls
+                    disable-zoom
+                    auto-rotate
+                    touch-action="pan-y"
+                    poster="assets/1Big.png"
+                    tone-mapping="aces"
+                    src="assets/one.glb"
+                    shadow-intensity="1"
+                    ar
+                    field-of-view="29deg">
                 </model-viewer>
+
+
             </div>
         </section>
     </div>
