prueba de model con mouseMove

--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -268,7 +268,7 @@
                         inolvidable llena de color y diversión!</p>
             </div>
             <div>
-                <model-viewer 
+                <model-viewer id="viewer"
                     class="elem1Big"
                     reveal="auto"
                     loading="eager"
