parallax pagina1, parallax pagina2

--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -57,10 +57,13 @@
     </header>
     <div class="backgroundScrolling page1">
         <section class="section1">
-            <div class="layerBackground arbol1"></div>
+            <div class="layerBackground arbol1" id="arbolGrande"></div>
             <div class="elem1"></div>
+            <div class="sombra1"></div>
             <div class="elem2"></div>
+            <div class="sombra2"></div>
             <div class="elem3"></div>
+            <div class="sombra3"></div>
             <div class="arbol2"></div>
             <div class="arbol3"></div>
             <div class="roca1"></div>
@@ -93,6 +96,7 @@
                     </div>
                 </div>
             <div class="elem4"></div>
+            <div class="sombra4"></div><div class="sombra5"></div>
         </section>
     </div>
     <div class="backgroundScrolling page3">
@@ -272,9 +276,7 @@
                     class="elem1Big"
                     reveal="auto"
                     loading="eager"
-                    camera-controls
                     disable-zoom
-                    auto-rotate
                     touch-action="pan-y"
                     poster="assets/1Big.png"
                     tone-mapping="aces"
