--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -250,10 +250,9 @@
             <div>
                 <span class="txtWatchVideo">Mira el video y descubre el sorprendente mundo de los NumberBlocks!</span>
             </div>
-            <!-- frame del video para mostrar desde yt, directamente en la pagina nuestra, preguntar en practica -->
-            <!-- <iframe width="804" height="452" src="https://www.youtube.com/embed/0YKa9DQYdRg" title="Numberblocks World #5 - Meet Numberblocks 55-100 and Learn How to Trace Their Numerals | BlueZoo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
-            <div class="videoNumbers" style="cursor: pointer;"
-            onclick="window.location.href='https://www.youtube.com/watch?app=desktop&v=0YKa9DQYdRg';"></div>
+            
+            <iframe class="videoNumbers" id="tvCambioFondo" src="https://www.youtube.com/embed/0YKa9DQYdRg"></iframe>
+
             <div class="pjVideo"></div>
         </section>
     </div>
