--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -32,7 +32,7 @@
                     <ul>
                         <li style="margin-left: 18px;"><span class="material-symbols-outlined">
                             home
-                        </span> Inicio</li>
+                        </span>Inicio</li>
                         <li style="margin-left: 18px;">
                             <span class="material-symbols-outlined">
                                 groups
@@ -86,13 +86,13 @@
                         premio BAFTA.</p>
                     </div>
                 </div>
-                <div class="elem5"></div>
+                <div class="elem5" id="azul5"></div>
                 <div class="frame">
                     <div class="tv" id="tvCambioFondo">
                         <img src="" alt="">
                     </div>
                 </div>
-            <div class="elem4"></div>
+            <div class="elem4" id="verde4"></div>
         </section>
     </div>
     <div class="backgroundScrolling page3">
