elementos aparecen de a uno y form suscribir hecho

--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -48,7 +48,7 @@
                 </ul>
             </div>
             <div> 
-                <button class="btnBuy">
+                <button class="buttonsPag btnBuy">
                     <p style="margin-right: 13px;">COMPRAR</p>
                 </button> 
             </div>
@@ -307,10 +307,16 @@
         <div class="boxTittle9">
             <h1 class="tittlePage9">¿Quieres ser el primero en enterarse de todas las novedades?</h1>
         </div>
-        <div class="form"></div>
+        <div class="form">
+            <form>
+                <input class="inputFormSuscribe" type="email" name="emailUser" id="inputEmail" placeholder="Ingresa aquí tu correo">
+            </form>
+            <button id="btnSuscribe" class="buttonsPag btnSuscribe">SUSCRIBIRSE</button>
+            <span id="suscribeAlert" class="hidden">Listo! Comenzarás a recibir las ultimas novedades.</span>
+        </div>
         <div class="textPage9">Al inscribirse en nuestra lista de correo, nos autoriza a ponernos en contacto con usted
             para enviarle ofertas y actualizaciones de marketing por correo electrónico, y también acepta nuestra
-            Política de privacidad y las Condiciones del servicio.</div>
+            <span class="subrayado">Política de privacidad</span> y <span class="subrayado">las Condiciones del servicios.</span></div>
             <div class="politica"></div>
             <div class="p9Mountain">
                 <img src="assets/fondoPage9.png" alt="p9WallPaper" width="1280" height="500"
@@ -332,9 +338,6 @@
             <div></div>
         </div>
         <div class="footerInfo">
-            <div class="spriteSheet1"></div>
-            <div class="spriteSheet2"></div>
-            <div class="spriteSheet3"></div>
             <div class="footerTxt">
                 ©SEGA. All rights reserved. SEGA is registered in the U.S. Patent and Trademark Office. SEGA, the SEGA logo
             and SONIC SUPERSTARS are either registered trademarks or trademarks of SEGA CORPORATION or its affiliates.
