--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -16,46 +16,44 @@
     <title>Number Blocks</title>
 </head>
 
-
 <body>
-    <header class="header">
-        <nav class="navBar">
-            <div class="nav_hamburger" id="navToggle">
-                 <button> 
-                    <span></span><span></span><span></span>
-                 </button>
-                </div>
-                <div class="logoSmall hidden" id="logoSmall"> 
-                    <img src="assets/numberBlocks.png" alt="NumberBlocks Logo"width=""> 
-                </div>
-                <div class="menu hidden" id="menu">
-                    <ul>
-                        <li style="margin-left: 18px;"><span class="material-symbols-outlined">
-                            home
-                        </span> Inicio</li>
+    <div class="backgroundScrolling page1">
+        <header class="header">
+            <nav class="navBar">
+                <div class="nav_hamburger" id="navToggle">
+                     <button> 
+                        <span></span><span></span><span></span>
+                     </button>
+                    </div>
+                    <div class="logoSmall" id="logoSmall"> 
+                        <img src="assets/numberBlocksGrande.png" alt="NumberBlocks Logo"width=""> 
+                    </div>
+                    <div class="menu hidden" id="menu">
+                        <ul>
+                            <li style="margin-left: 18px;"><span class="material-symbols-outlined">
+                                home
+                            </span> Inicio</li>
+                            <li style="margin-left: 18px;">
+                                <span class="material-symbols-outlined">
+                                    groups
+                                </span>
+                                Sobre Nosotros
+                        </li>
                         <li style="margin-left: 18px;">
                             <span class="material-symbols-outlined">
-                                groups
+                            download
                             </span>
-                            Sobre Nosotros
-                    </li>
-                    <li style="margin-left: 18px;">
-                        <span class="material-symbols-outlined">
-                        download
-                        </span>
-                            Descargar Juego
-                    </li>
-                </ul>
-            </div>
-            <div> 
-                <button class="buttonsPag btnBuy">
-                    <p style="margin-right: 13px;">COMPRAR</p>
-                </button> 
-            </div>
-        </nav>
-        <div class="numberBlockPoster" id="logoPage"></div>
-    </header>
-    <div class="backgroundScrolling page1">
+                                Descargar Juego
+                        </li>
+                    </ul>
+                </div>
+                <div> 
+                    <button class="buttonsPag btnBuy">
+                        <p style="margin-right: 13px;">COMPRAR</p>
+                    </button> 
+                </div>
+            </nav>
+        </header>
         <section class="section1">
             <div class="layerBackground arbol1" id="arbolGrande"></div>
             <div class="elem1"></div>
