pantalla de carga

--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -18,6 +18,21 @@
 
 <body>
 
+    <div class="loader-container">
+        <div class="loader">
+          <div class="number-blocks-logo">
+            <img src="assets/oneLoader.webp" alt="NumberBlocks Logo" >
+          </div>
+          <div class="loading-animation">
+            <div class="block-1"></div>
+            <div class="block-2"></div>
+            <div class="block-3"></div>
+            <div class="block-4"></div>
+          </div>
+          <p class="cargando" style="font-size: medium;">Cargando...</p>
+        </div>
+      </div>
+
     <div class="backgroundScrolling page1">
         <header class="header">
             <nav class="navBar">
