--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -344,6 +344,9 @@
             <img src="assets/fondoPage9.png" alt="p9WallPaper" width="1280" height="500"
                 style="position: relative;z-index: 0;">
         </div>
+            <div class="layer layer-3"></div>
+    <div class="layer layer-2"></div>
+    <div class="layer layer-1"></div>
         <div class="page9Elements">
             <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExMXhjcGs2dTd6MG84Nm15eG94bWN6Nnppdnp6aG9uMzFqdTAxMjF1cSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/5ddqGqO8x5rrJ7v5tf/giphy.gif"
                 alt="GIF" width="480" height="480"
